--- a/_config.yml
+++ b/_config.yml
@@ -67,13 +67,13 @@ feed:
 # or "master" otherwise
 safe: False
 lsi: False
-username: jekyller
-repo: jasper2
+username: Huzit
+repo: huzit.github.io
 branch: master
 relative_source: ../jasper2/
 destination: ../jasper2-pages/
-production_url:  https://huzit.github.io/jasper2/
-source_url:  https://github.com/jekyller/huzit.github.io/
+production_url:  https://huzit.github.io/
+source_url:  https://github.com/Huzit/huzit.github.io
 
 exclude:
   - assets/css
