--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ feed:
 safe: False
 lsi: False
 username: Huzit
-repo: huzit
+repo: huzit.github.io
 branch: master
 relative_source: ../jasper2/
 destination: ../jasper2-pages/
